# cmakeproj

./: .ediorconfig  .gitignore  CMakeLists.txt  Makefile
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  mainpage.md
include/project/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
